separate versions of ranking_14 for fig 5 and 8

--- a/figures/f06/RHB_GOES_fig_2coldpools.ipynb
+++ b/figures/f06/RHB_GOES_fig_2coldpools.ipynb
@@ -9,18 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Projects/ATOMIC/ATOMIC_GOES/julia/RHB`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Projects/ATOMIC/ATOMIC_GOES/julia/RHB/Project.toml`\n",
-      "  \u001b[90m[438e738f] \u001b[39m\u001b[92m+ PyCall v1.96.4\u001b[39m\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Projects/ATOMIC/ATOMIC_GOES/julia/RHB/Manifest.toml`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Projects/ATOMIC/ATOMIC_GOES/julia/RHB`\n"
      ]
     }
    ],
@@ -48,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/System/Library/Fonts/Helvetica.ttc\n",
       "/opt/X11/share/system_fonts/HelveticaNeue.ttc\n",
-      "/opt/X11/share/system_fonts/Helvetica.ttc\n",
       "/System/Library/Fonts/HelveticaNeue.ttc\n",
-      "/System/Library/Fonts/Helvetica.ttc\n"
+      "/opt/X11/share/system_fonts/Helvetica.ttc\n"
      ]
     },
     {
@@ -145,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
